--- a/app/package.json
+++ b/app/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.html",
   "window": {
-    "toolbar": false,
+    "toolbar": true,
     "height": 400,
     "width": 400,
     "frame": true
