--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
     "easy-zip": "0.0.4",
     "excel": "^0.1.2",
     "fs": "0.0.2",
-    "fs-extra": "^0.18.0",
+    "fs-extra": "^0.18.1",
     "imagemagick": "^0.1.3",
     "jszip": "^2.5.0",
     "lodash": "^3.6.0",
+    "mkdirp": "^0.5.0",
     "path": "^0.11.14",
     "xlsx-to-json": "^0.2.3"
   }
