--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "main": "index.html",
   "window": {
-    "toolbar": true,
-    "height": 570,
-    "width": 400,
+    "toolbar": false,
+    "height": 620,
+    "width": 490,
     "frame": true
   }
 }
